lab2 upload ; notes format update

--- a/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L2_2.md
+++ b/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L2_2.md
@@ -1,351 +1,152 @@
 ### 2nd Order Circuit Example
-$x (-+) -> L -> R ->C/y(t)(+-) -> (-+)x$
+A circuit with the following components:  
+$x \;(-+)\; \to L \to R \to C \to y(t)\; (+-)\; \to (-+)x$
 
-KVL:
-$$x - Li' - Ri - y = 0$$
-using i = Cy'
-$$x - LCy'' - RCy' - y = 0$$
+**KVL:**  
+$$x - L\frac{di}{dt} - Ri - y = 0$$  
+Using $i = C\frac{dy}{dt}$,  
+$$x - LC\frac{d^2y}{dt^2} - RC\frac{dy}{dt} - y = 0$$  
 
+---
 
 ### Examples
-Scaling system ($a_0 = 1, \ b_0 = a$)  
-$$y = ax$$
+- **Scaling system** ($a_0 = 1, \ b_0 = a$)  
+  $$y = ax$$
 
-Integrator ($a_1 = 1, \ b_0 = 1$)  
-$$y' = x$$
+- **Integrator** ($a_1 = 1, \ b_0 = 1$)  
+  $$\frac{dy}{dt} = x$$
 
-Differentiator ($a_0 = 1, \ b_1 = 1$)  
-$$y = x'$$
+- **Differentiator** ($a_0 = 1, \ b_1 = 1$)  
+  $$y = \frac{dx}{dt}$$
 
-Integrator with feedback (a few slides back, $a_1 = 1, \ a_0 = a, \ b_0 = 1$)  
-$$y' + ay = x$$
+- **Integrator with feedback** ($a_1 = 1, \ a_0 = a, \ b_0 = 1$)  
+  $$\frac{dy}{dt} + ay = x$$  
 
+---
 
-### Systems Descrhibed by Differential equations
-Many systems are described by a _linear constant coefficient ordinary differential equation (LCCODE)_
+### Systems Described by Differential Equations
+Many systems are described by a _linear constant coefficient ordinary differential equation (LCCODE)_:
 
+$$a_n \frac{d^n y}{dt^n} + \cdots + a_1 \frac{dy}{dt} + a_0 y(t) = b_m \frac{d^m x}{dt^m} + \cdots + b_1 \frac{dx}{dt} + b_0 x(t)$$
 
-$$a_n y^{(n)}(t) + \cdots + a_1 y'(t) + a_0 y(t) = b_m x^{(m)}(t) + \cdots + b_1 x'(t) + b_0 x(t)$$
+With given _initial conditions_:  
+$$y^{(n-1)}(0), \ \dots, \ y'(0), \ y(0)$$  
 
-with given _initial conditions_
+- **n**: order of the system.  
+- $b_0, \dots, b_m, a_0, \dots, a_n$: coefficients of the system.  
 
-$$
-y^{(n-1)}(0), \ \dots, \ y'(0), \ y(0)
-$$
+An LCCODE gives an implicit description of a system:  
+- Describes how $x(t)$, $y(t)$, and their derivatives interrelate.  
+- Does not provide an explicit solution for $y(t)$ in terms of $x(t)$.  
 
-(which fixes $y(t)$, given $x(t)$)
-- n is called the order of the system
-- $b_0, ..., b_m, a_0, ...,  a_n$ are the coefficients of the system
+---
 
-Note that an LCCODE gives an implicit description of a system.
-- It describes how x (t ), y (t ), and their derivatives interrelate
-- It doesn’t give you an explicit solution for y (t ) in terms of x (t )
 ### System Invertibility
-A system is invertible if the input signal can be recovered from the output signal
+A system is invertible if the input signal can be recovered from the output signal:  
+$$y = Fx, \quad x = F^{-1}y = F^{-1}Fx$$  
 
-$y = Fx; x = F^{inv}y = F^{inv}Fx$
-- $x ->[F] -> y ->[F^{inv}] -> x$
+Diagram:  
+$$x \to [F] \to y \to [F^{-1}] \to x$$  
 
-note: $F^{inv}F = I$, the indentity operator
+Note: $F^{-1}F = I$, the identity operator.  
 
-example:
-- AM Radio Transmitter and receiver
-- multi-path echo cancelator
-### Example: Cruise control
-$x -> (+)_+, (+)-\text{error}->[k]-\text{gas} -> [H] ->y, [H][k]y -> (+)_-$
+**Examples:**  
+- AM Radio transmitter and receiver.  
+- Multi-path echo canceler.  
 
-Output: $y = H(k(x -y))$
+---
 
-The system can become unstable if k is too large (depending on H )
-- Positive error adds gas
-- Delay car velocity change, speed overshoots
-- Negative error cuts gas off
-- Delay in velocity change, speed undershoots
-- Repeat
+### Example: Cruise Control
+Control feedback system:  
+$$x \to (+)_{+} \to \text{error} \to [k] \to \text{gas} \to [H] \to y$$  
+$$[H][k]y \to (+)_{-}$$  
+
+Output:  
+$$y = H(k(x - y))$$  
+
+The system can become unstable if $k$ is too large (depending on $H$):  
+- Positive error adds gas.  
+- Delayed velocity change causes speed to overshoot.  
+- Negative error reduces gas.  
+- Delayed velocity change causes speed to undershoot.  
+
+---
 
 ### System Stability
-- Stability important for most engineering applications.
-- Many definitions
-- In a system's definition, if a bounded input
-$$|x(t)| \leq M_x < \infty$$
-always results in a bounded output
-$$|y(t)| \leq M_y < \infty,$$
-where $M_x$ and $M_y$ are finite positive numbers, the system is _Bounded Input Bounded Output_ (BIBO) stable
->
+- Stability is critical for most engineering applications.  
+- A system is **Bounded Input Bounded Output (BIBO) stable** if:  
+  $$|x(t)| \leq M_x < \infty$$  
+  always results in:  
+  $$|y(t)| \leq M_y < \infty,$$  
+  where $M_x$ and $M_y$ are finite positive numbers.  
+
+---
 
 ### Time-Invariance
-- A system is time-invariant if a time shift in the input produces the same time shift in the output
-- For a system F, 
-$$y(t) = Fx(t)$$
-implies that 
-$$y(t- \tau) = Fx(t -\tau)$$
-for any time shift $\tau$
+A system is time-invariant if a time shift in the input produces the same time shift in the output.  
 
-- implies that delay and the system F commute
+For a system $F$,  
+$$y(t) = F(x(t))$$  
+implies that:  
+$$y(t-\tau) = F(x(t-\tau))$$  
+for any time shift $\tau$.  
+
+---
 
 ### System Memory
-- A system is memoryless if the output depends only on the 
-**present input**.
-    - Ideal amplifier
-    - Ideal gear, transmission, or lever in a mechanical system
+- A system is **memoryless** if the output depends only on the **present input**.  
+  - Example: Ideal amplifier.  
+- A system with **memory** has an output that depends on **past or future inputs**.  
+  - Example: Energy storage elements like capacitors and inductors.  
+- A **causal system** has an output that depends only on **past or present inputs**.  
 
-- A system with memory has an output signal that depends on **inputs in the past or future**.
-    - Energy storage circuit elements such as capacitors and inductors
-    - Springs or moving masses in mechanical systems
-
-- A causal system has an output that depends only on **past or present inputs**.
-    - Any real physical circuit, or mechanical system.
-
+---
 
 ### Linearity
-A system F is linear if the following two properties hold:
-1. homogeneity: if x is any signal and _a_ is any scaler
-- $F(ax) = aF(x)$
-2. superposition: if x and $\tilde{x}$ are any two signals
-- $F(x+\tilde{x}) = F(x)+F(\tilde{x})$
+A system $F$ is linear if:  
+1. **Homogeneity**: $F(a x) = a F(x)$, where $a$ is a scalar.  
+2. **Superposition**: $F(x + \tilde{x}) = F(x) + F(\tilde{x})$.  
 
-
-In words, linearity means:
-- Scaling before or after the system is the same
-    - $x-> (a) -> [F] -> \equiv x-> [F]->(a) ->y$
-- Summing before or after the system is the same
-    - $x_1 -> (+), x_2 -> (+), (x) -> [F] -> y \equiv x_1 -> [F]_1 -> (+), x_2 -> [F]_2 -> (+), (+)->y$; note: F_1 is the same system as F_2
-
-Examples of linear systems: scaling system, differentiator, integrator, running average, time shift, convolution, modulator, sampler.
-
-Examples of nonlinear systems: sign detector, multiplier (sometimes), comparator, quantizer, adaptive filter
-
-Multiplier as a modulator, $y(t) = x(t) cos(2\pi ft)$, is linear
-- $x -> (x), cos(2\pi ft)-> (x), (x) ->y$
-
-Multiplier as a squaring system, $y(t) = x^2(t)$ is nonlinear
-- $x->(x),x ->(x), (x)->y$
+---
 
 ### Interconnection of Systems
-- Cascade (or series): y = G(F(x)) = GFx
-    - $x ->[f]-> [g] -> y$
-- sum (or parrallel): y = Fx + Gx
-    - $x->[f] -> (+), x -> [g] ->(+), (+) -> y$
-- feedback: $y = F(x- Gy)$
-    - $x ->(+)_+ -> [F] -> y, [G]y -> (+)_-, (+)_{+,-} -> [F] -> y$
+1. **Cascade (series):**  
+   $$y = G(F(x)) = GFx$$  
+   Diagram: $x \to [F] \to [G] \to y$.  
+2. **Sum (parallel):**  
+   $$y = Fx + Gx$$  
+   Diagram: $x \to [F] \to (+), \; x \to [G] \to (+) \to y$.  
+3. **Feedback:**  
+   $$y = F(x - Gy)$$  
+   Diagram: $x \to (+)_{+} \to [F] \to y, \; [G]y \to (+)_{-} \to (+)_{+}$.  
 
-Example: Integrator with feedback
-- input to integrator is $x - ay$, where _a_ is the system of the feedback given by y
-$$ \int^{t} (x(\tau)- ay(\tau))d\tau = y(t)$$
-which  makes the deriative
-$$x - ay = y'$$
+---
 
-### Examples with multiple inputs
-summing system: $y(t) = x_1(t)+x_2(t)$
+### Example: Integrator with Feedback
+Input to the integrator is $x - ay$, where $a$ is the feedback coefficient:  
+$$\int_{0}^t (x(\tau) - ay(\tau)) d\tau = y(t)$$  
+Derivative:  
+$$x - ay = \frac{dy}{dt}$$  
 
-$x_1 \to (+), x_2 \to (+)$
-
-$(+) \to y$
-
-difference system: $y(t) = x_1(t)-x_2(t)$
-
-$x_1 \to (+)_+, x_2 \to (+)_-$
-
-$(+) \to y$
-
-summing system: $y(t) = x_1(t)x_2(t)$
-
-$x_1 \to (x), x_2 \to (x)$
-
-$(x) \to y$
-
+---
 
 ### Block Diagram
-$x \to [s] \to y$
-- Lines with arrows denote signals
-- Boxes denoe systemss; arrows show inputs & outtputs
-examples
-Scaling system: $y(t) = ax(t)$
-- Called an amplifier if $|a|> 1$
-- Called an attenuator if $|a|< 1$
--Called inverting if $a < 0$
-- a is called the gain or scale factor.
-- Sometimes denoted by triangle or circle in block diagram
+- Lines with arrows denote signals.  
+- Boxes denote systems; arrows show inputs and outputs.  
 
-time shift system : $y(t) = x(t - T)$
-- delay system if $T>0$
-- predictor system if $T<0$
+**Examples:**  
+1. **Scaling system:**  
+   $$y(t) = ax(t)$$  
+   - Amplifier: $|a| > 1$.  
+   - Attenuator: $|a| < 1$.  
+   - Inverting: $a < 0$.  
+   - $a$: gain or scale factor.  
 
-convolution system: $y(t) = \int x(t- \tau)h(\tau)d\tau$, where h is a given function
-### Systems
-- A system transforms input signals into output signals.
-- A system is a function mapping input signals into output signals.
-- We will concentrate on systems with one input and one output i.e. single-input, single-output (SISO) systems
+2. **Time shift system:**  
+   $$y(t) = x(t - T)$$  
+   - Delay system: $T > 0$.  
+   - Predictor system: $T < 0$.  
 
-Notation:
-- $y = Sx, y = S(x)$, meaning the system S acts on an input signal x to produce output signal y
-
-### Integrals and Deriatives of impulsive functions
-example: $x(t) = 1 + \delta(t -1)-2\delta(t-2)$
-- let $y(t) = \int^{t}_{0}x(\tau) d\tau$
-- $y'(t) = 1 + \delta(t -1)-2\delta(t-2)$
-
-Integration by parts suggests we define
-$$\int^{\infty}_{\infty} \delta '(t)f(t)dt = \delta(t)f(t)|^{\infty}_{-\infty}
-- \int^{\infty}_{-\infty}\delta(t)f'(t) = -f'(0)$$
-provided f' continuous at t = 0
-
-General Defintion (k-oder impulse):
-$$\int^{\infty}_{-\infty} \delta^{(t)}(t)f(t)dt = (-1)^{k}f^{(k)}(0)$$
-provided f^k continuous at t = 0
-
-Interpretation of doublet $\delta '$: take two impulses with magnitude $\pm 1/ \epsilon$, a dsitance $\epsilon$ and let $\epsilon \to 0$
-
-Then
-$$\int^{\infty}_{-\infty}f(t)(\frac{\delta(t)}{\epsilon} - \frac{\delta(t - \epsilon)}{\epsilon}) dt = \frac{f(0) - f(\epsilon)}{\epsilon}$$
-
-**Caveat**
-$\delta(t)$ is not a signal or function in the ordinary sense, it only makes mathematical sense when inside an integral sign
-
-- It is safe to use impulsive function in expression like
-$$\int^{\infty}_{-\infty}f(t)\delta(t - T)dt, \int^{\infty}_{-\infty}f(t)\delta '(t - T)dt$$
-provided f(repectively, f') is continuos at t = T
-- Else, we should not consider modification on the delta(t), like $delta(t)^2$ or $\delta(t^2)$; it is not a function, but a sampling notation
-
-
-### Physical Interpretation
-Impulse functions are used to model physical signals
-- that act over short time intervals 
-- whose effect depends on integral of signal
-
-ex. at t = 2, a = 1.999, b = 2.001
-
-ex. rapid charging of capacitor with 1V battery -> switch -> 1F capacitor -> battery model
-- Assuming v(0) = 0, what is v(t), i(t) for t > 0
-    - i(t) is very large, for a very short time (delta(t))
-    - a unit charge is transferred to the capacitor almost instataneuosly
-    - v(t) increases to v(t) = 1 'almost instantaneously' (integrated(delta(t)))
-- As $I_{max} \to \infty$, i approaches an impulse, v appraoches a unit step
-### Limits of Integration
-The integral of a $\delta$ is non-zero only if it is in the integration interval
-- If a < 0 and b > 0 then
-$$\int^{b}_{a} \delta(t) dt = 1$$
-- If a > 0 or b < 0 , and a < b then
-$$\int^{b}_{a} \delta(t) dt = 0$$
-becuase the $\delta$ is outside the integration interval
-- Ambiguous if a = 0 or b = 0
-
-Convention: using limits such as a - or b+ to denote whether we include the impulse or not
-
-
-### Shifting property
-- $x(t) = \delta(t- T)$ is an impulse function with impulse t = T
-- For f continuous at t = T
-$$\int^{\infty}_{-\infty}f(t)\delta(t - T)dt = f(T)$$
-- Multiplying impulse at time T and integrating, samples the f(t) at T
-
-### Multiplication of a Function by an Impulse
-- Substiute the function into the fomal definition with a continuous f(t) and evaluate
-
-$$\int^{\infty}_{-\infty}f(t) [\phi(t)\delta(t)] dt = \int^{\infty}_{-\infty} [f(t)\phi(t)]\delta(t) dt  = f(0)\phi(0)$$
-
-Hence, given $\phi(t) = \phi(0)$ is a scaled impulse with strength $\phi(0)$
-
-### Scaled Impulses
-$a\delta(t)$ is an impulse at time T, with magnitude or strength $\alpha$, thus
-
-$$\int^{\infty}_{-\infty} \alpha \delta(t) f(t) dt = \alpha f(0)$$
-provied f is continuous at 0
-
-### Example: Model $\delta(t) \text{ as } g_n(t) = n \text{rect}(nt)$
-- as $n \to\infty$, the area becomes (n) (1/n)
-- if $f(t)$ is continous at $t = 0$, then
-$$\int^{\infty}_{-\infty}f(t)\delta(t) dt = \lim_{n\to \infty}\int^{\infty}_{-\infty}f(t)g_n(t)dt = f(0) \int^{\infty}_{\infty}g_n(t)dt = f(0)$$
-
-### Formal properties (of delta)
-$$ \int^{\infty}_{-\infty} f(t) \delta(t)dt= f(0)$$
-provided f is contiuous at t = 0
-
-idea: $\delta$ acts over a time interval very small, over which $f(t) \approx f(0)$
-- Conceptually $\delta(t) = 0 \text{ for } t \neq 0$, infinite at t =0, while mathmatically it is not logical
-
-### Impulsive signals
-(Dirac's) delta function or impulse $\delta$ is an idealization of a signal that
-- is very large near t = 0
-- is very small away from t = 0
-- has integral 1
-
-- note: the exact shape of the function does not matter
-    - the range of the signal is denoted by $2 \epsilon$
-    - the height of the signal is denoted by $1/ \epsilon$
-
-### More Complex Signals
-ex. Pulsed Doppler RF Waveform
-- $cos(\omega t)$ ated for $\tau$ duration , repeated by every T, and for a total of N pulses
-<insert png>
-
-ex. square signal
-- start with rect(t)
-- scale the duration you want rect($at$), where a is fraction there will be a compression and integers there will be an expansion
-    - $A rect(t/ \tau)$
-- Combine shifted replicas 
-    - $\sum^{2}_{n = -2}A rect((t- nT)/ \tau)$
-    - note: -nT shifts by every n, $1/\tau$ compresses by tau
-### Unit Triangle
-$$Tri(t) = 
-\begin{cases} 
-1 - |t|,& \text{if} |t| < 1 \\ 
-0, \text{otherwise}
-\end{cases}
-$$
-
-### Unit Ramp
-$$r(t) = \begin{cases} t, & t \geq 0 \\ 0, & t < 0 \end{cases}$$
-The unit ramp is the integral of the unit step
-$$r(t) = \int^{t}_{-\infty} u(\tau) d\tau$$
-
-#### Unit Step Functions
-$$ u(t) =
-\begin{cases} 
-1, & t \geq 0 \\
-0, & t < 0
-\end{cases}$$
-
-Uses for the unit step:
-- Extract part of another signal, a piecewise-defined signal
-$$ x(t) = \begin{cases} e^{-t}, & t \geq 0 \\ 0, & t < 0 \end{cases}$$
-Given an modulation of u(t)
-$x(t) = u(t)e^{-t}$
-
-<insert png>
-- Combinations of unit steps to create rectangular signal
-$$x(t) = \begin{cases} 0, & t \geq 1 \\ 1, & 0\leq t < 1 \\ 0, & t < 0$$
-which can be written as
-$$x(t) = u(t) - u(t-1)$$
-
-- Unit rectangle signal
-$$ x(t) = \begin{cases} 1, & \text{if} |t|\leq 1/2 \\0, & \text{otherwise} \end{cases}$$
-
-### Complex Plane
-Each complex frequnecy $s = \delta + j\omega$ corresponds to a position in the complex plane (vertical: $j\omega$, horizontal: $\delta$)
-
-- Left Half Plane: $\delta < 0 $, decreasing signals
-- Right Half Plane $\delta > 0 $, inreasing signals
-
-
-
-### Damped or Growing Sinusoids 
-$$x(t) = e^{\delta t}cos(\omega t + \theta)$$
-- $\delta$ modulate the sinusoids (greater than or less than 0)
-The exponetial version:
-$$ e^{(\delta + j\omega)t + j \theta} = e^{\delta t}(cos(\omega t + \theta)+ i sin(\omega t + \theta))$$
-
-### Exponential Signals
-Definition: $x(t) = e^{\delta t}$
-- decay if $\delta < 0$ and growth if $\delta > 0$
-
-### Complex Sinusoids
-- Euler relation: $e^{j \phi} = cos(\phi) + j sin(\phi)$
-- Sinusoid: $Ae^{j(\omega t + \theta)} = Acos(\omega t + \theta) + jAsin(\omega t + \theta); Re{Ae^{j(\omega t + \theta)}}= Acos(\omega t + \theta)$
-
-### Sinusoidal Sisgnals
-Form: $x(t) = cos(\omega t + \theta) \leftrightarrow Acos(2\pi f t+ \theta)$
-- $\omega = 2\pi f$ has units of radians/s; it is the radian frequency
-- The period of sinusoid is $ T = 1/ f = 2 \pi / \omega$
-
-
+3. **Convolution system:**  
+   $$y(t) = \int_{-\infty}^\infty x(t-\tau)h(\tau)d\tau$$  
+   where $h(\tau)$ is a given function.  
