--- a/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L3_2-4.md
+++ b/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L3_2-4.md
@@ -1,108 +1,112 @@
-
 ### L3 Summary
-For an input x(t), the output of an linear system is given by the superposition integral
-$$y(t) = \int^{\infty}_{-\infty}x(\tau)h_{\tau}(t)d\tau$$
+For an input $x(t)$, the output of a linear system is given by the superposition integral:  
+$$y(t) = \int_{-\infty}^{\infty} x(\tau) h_{\tau}(t) d\tau$$
 
-If the system is aslo time invariant, the result is a convolution integral
-$$y(t) = \int^{\infty}_{-\infty}x(\tau)h(t - \tau)$$
+If the system is also time-invariant, the result is a convolution integral:  
+$$y(t) = \int_{-\infty}^{\infty} x(\tau) h(t - \tau) d\tau$$
 
-The reponse of an LTI system is completely characterized by its impulse reponse h(t)
+The response of an LTI system is completely characterized by its impulse response $h(t)$.
 
-Another expression for the superposition integral can be found by substituting for $\tau = t - \tau_1$, then $d\tau = -d\tau_1$ and $\tau_1 = t -\tau$
+Another expression for the superposition integral can be found by substituting $\tau = t - \tau_1$, then $d\tau = -d\tau_1$ and $\tau_1 = t - \tau$:  
+$$y(t) = \int_{-\infty}^{\infty} x(\tau) h(t - \tau) d\tau$$  
+$$y(t) = \int_{-\infty}^{\infty} x(t - \tau_1) h(t - (t - \tau_1)) d(-\tau_1)$$
 
-$$y(t) = \int^{\infty}_{-\infty} x(\tau)h(t-\tau)d\tau$$
-
-$$y(t) = \int^{-\infty}_{\infty} x(t - \tau_1) h(t-(t-\tau_1))d(-\tau_1)$$
-$$y(t) = \int^{\infty}_
-
+---
 
 ### System Equation
-The System Equation relates the outputs of a system to its inputs. Example from last time: the system described by the block diagram
+The system equation relates the outputs of a system to its inputs. Example from last time: the system described by the block diagram:  
+$$x \to (+)_{+} \to \text{integral} \to y, \; y \cdot a \to (+)_{-}$$  
 
+This results in:  
+$$y' = x - ay$$  
+where initial conditions specify a solution.
 
-$x -> (+)_+, (+) -> integral ->y, y * a -> (+)_-$
-- $y' = x - ax$, where i_0 specify a solution
+#### Solutions for the System Equation
+The output consists of two components:  
+1. **Zero-input response**: The output when $x(t) = 0$.  
+2. **Zero-state response**: The output of the system with initial conditions set to zero.
 
-Solutions for the System Equastion
-- The output consists of two components
-    1. zero-input reponse, which is where what system does when input x(t) = 0 ->[H] -> y
-    2. zero-state reponse, wich is the output of the system with inital conditions to be zeros
+For a linear system $H$, the zero-input response is zero due to homogeneity: if $y = F(ax) = aF(x)$, then $a = 0$ implies $y = 0$.  
 
-- If H is a linear system , its zeroinput reponse is zero. Homogeneity states if y = F(ax) = aF(x). If a = 0, which gives a zero input of x, then the output should be zero
+---
 
-example: Solve for the voltage across the capacitor y(t) for an arbitrary input voltage x(t), iven an inital value $y(0) = Y_0$
-x(t)(-+) - i(t) -> R - > C (+-)/ y(t)-> (-+)x(t)
-- KVL: x(t) = R*i(t) + y(t)
-- Using $i(t) = Cy'(t), x(t) = RCy'(t) + y(t) = x(t)$
-- $i_o = 0, RCy'(t) + y(t) = 0$
-    - Using first order odrinary equation $\frac{dy}{dt} + p(t) y + q(t)$  and multiplying factor of$ \mu = e^{\int P(t)}$, we have $y(t) = Ae^{-t/ Rc}$
-- Sub y(t) back
-$$RC[A'(t)e^{-t/RC}-\frac{1}{Rc}A(t)e^{-t/RC}]+A(t)e^{-t/RC} = x(t)$$
-Simplifying
-$$A'(t) = x(t)[\frac{1}{RC}e^{t/RC}] \tp A(t) = \int^{t}_{0}x(\tau)[\frac{1}{RC}e^{\tau / RC}]d \tau + A(0)$$
+### Example: Solving for Voltage Across a Capacitor
+Find $y(t)$ for an arbitrary input voltage $x(t)$, given $y(0) = Y_0$.  
 
-Given $y(t) = A(t)e^{-t/ Rc}$
-$$y(t) =  [\int^{t}_{0}x(\tau)[\frac{1}{RC}e^{\tau / RC}]d \tau + A(0)]e^{-t/Rc}$$
+Circuit:
+- $x(t) \to (-+)$, $i(t) \to R \to C \to y(t) \to (-+)x(t)$.  
 
-At t = 0, y(0) = Y_0, so this gives A(0) = Y_0
-$$y(t) = \underbrace{\int^{t}_{0}x(\tau)[\frac{1}{Rc}e^{-(t-\tau)/RC}] d\tau}_{\text{zero-state reponse}} + \underbrace{Y_0e^{-t/RC}}_{zero-input reponse}
+Using KVL:  
+$$x(t) = R i(t) + y(t)$$  
+Using $i(t) = C \frac{dy}{dt}$:  
+$$x(t) = RC \frac{dy}{dt} + y(t)$$  
 
-let's verify
+Zero-input case:  
+$$RC \frac{dy}{dt} + y(t) = 0$$  
 
-The impulse reponse (h(t))
- $h(t) = \frac{1/RC}e^{-t/RC}$ (NOTE: need to find the derivation)
+Using the first-order ODE solution:  
+$$\frac{dy}{dt} + p(t)y = q(t), \; \mu = e^{\int P(t)}$$  
+We get:  
+$$y(t) = A e^{-t/RC}$$  
 
-Then the reponse of this system to an input x(t) is 
-$$y(t) = \int^{t}_{0} x(\tau)h_{\tau}(t)d\tau  = \int^{t}_{0}x(\tau)[\frac{1}{RC}e^{-(t-\tau)/RC}]d\tau$$, which is the zero state solution found earlier
+For arbitrary input $x(t)$:  
+$$RC \left[A'(t)e^{-t/RC} - \frac{1}{RC} A(t)e^{-t/RC}\right] + A(t)e^{-t/RC} = x(t)$$  
 
-### Output of an LTI system
-$x -> [H] -> y$
+Simplifying:  
+$$A'(t) = x(t) \cdot \frac{1}{RC} e^{t/RC}$$  
+$$A(t) = \int_{0}^{t} x(\tau) \frac{1}{RC} e^{\tau / RC} d\tau + A(0)$$  
 
-signal $x(t)$ as a sample of itself:
-$$x(t) = \int^{\infty}_{-\infty}x(\tau)\delta_{\tau}(t)d\tau$$
-- note: this expression implies x(t) is now a weighted integral of delta
+Given $y(t) = A(t)e^{-t/RC}$:  
+$$y(t) = \left[\int_{0}^{t} x(\tau) \frac{1}{RC} e^{\tau / RC} d\tau + A(0)\right] e^{-t/RC}$$  
 
-Apply weighted x(t) to H: $y(t) = H(x(t)) = H(\int^{\infty}_{-\infty}x(\tau)\delta_{\tau}(t)d\tau)$
-implies
-$$ y(t) = \int^{\infty}_{-\infty} x(\tau)H(\delta_{\tau}(t))$$
-implies
-$$y(t) = \int^{\infty}_{-\infty}x(\tau)h_{\tau}(t)d\tau$$
-    - this is superposition integral. The values of x(tau)h(t, tau)d tau are superimposed (added up) for each input time tau
-    - if the superposition integral is time invariant, we would call this form of a convolution integral
+At $t = 0$, $y(0) = Y_0 \implies A(0) = Y_0$.  
+$$y(t) = \underbrace{\int_{0}^{t} x(\tau) \frac{1}{RC} e^{-(t-\tau)/RC} d\tau}_{\text{Zero-state response}} + \underbrace{Y_0 e^{-t/RC}}_{\text{Zero-input response}}$$  
 
-<insert png>
-
-### Time-Invariance
-Definition: If H is time invariant, delaying the input and output both by a time $\tau$ should produce the same reponse
-$$h_\tau = h(t - \tau)$$
-<insert png>
-
-Linearity: A system S is linear if it satifies both
-- Homogeneity: if $y = Sx$, and a is a constant
-    - $ay = S(ax)$
-- Superposition: if $y_1 = Sx_1, y_2 = Sx_2$, then
-    - $y_1 + y_2 = S(x_1 + x_2)$
-
-Thus,
-$$ay_1 + b_2 = S(ax_1 + bx_2)$$
-
-Extended linearity
-- Summation: if $y_n = Sx_n$ for all n, an integer from $(\infty < n < \infty)$, and $a_n$ are constant
-$$\sum_{n} a_ny_n = S(\sum_n a_nx_n)$$
-    - note: summation and the system operator commute
-- Itnegration (simple sample): if $y = Sx$
-$$\int^{\infty}_{-\infty}a(\tau)y(t- \tau)d\tau = S(\int^{\infty}_{-\infty}a(\tau)x(t- \tau)d\ta)
-     - note: integration and the system operator commute
+---
 
 ### Impulse Response
-The impulse reponse of a linear system $h_{\tau}$ is the output of the system at time t to an impulse at time $\tau$ (t - tau) with a system H can be written as
-$h_{\tau} = H(\delta_{\tau})$
-<insert png>
-note: positive tau cause a forward shift of signal and gives the sampling range of t-tau 
+The impulse response $h(t)$ is:  
+$$h(t) = \frac{1}{RC} e^{-t/RC}$$  
 
-note: left-hand side t serve a specific value for time, which is different of t on the right hand side -- it varies over all the real number (e.g, all time t; due to its impulse nature), but it is still something that specific time t is dependent on
-$$h_{\tau}(t) = H(\delta_{\tau}(t))$$ is a confusing one
-    - at $\tau = 0$, $h = h_0 = H(\delta_0)$
-    - using $ t= 2$ to do evaluation, $h(2) = H(\delta(2))$ implies h(2) = H(0), which is wrong
-        - a better notation for the process: $h(t, tau) = h(2, 0) - h(t, 0)$
-    
+The response of this system to an input $x(t)$ is:  
+$$y(t) = \int_{0}^{t} x(\tau) h(t - \tau) d\tau = \int_{0}^{t} x(\tau) \frac{1}{RC} e^{-(t-\tau)/RC} d\tau$$  
+
+This matches the zero-state solution found earlier.
+
+---
+
+### Output of an LTI System
+An LTI system $H$ transforms the signal $x(t)$:  
+$$x(t) = \int_{-\infty}^{\infty} x(\tau) \delta_{\tau}(t) d\tau$$  
+
+Apply $H$:  
+$$y(t) = H\left(\int_{-\infty}^{\infty} x(\tau) \delta_{\tau}(t) d\tau\right)$$  
+
+Resulting in:  
+$$y(t) = \int_{-\infty}^{\infty} x(\tau) H(\delta_{\tau}(t))$$  
+$$y(t) = \int_{-\infty}^{\infty} x(\tau) h_{\tau}(t) d\tau$$  
+
+For time-invariant systems:  
+$$h_{\tau}(t) = h(t - \tau)$$  
+
+---
+
+### Time-Invariance
+For a time-invariant system $H$:  
+$$h_{\tau}(t) = h(t - \tau)$$  
+
+---
+
+### Linearity
+A system $S$ is linear if:  
+1. **Homogeneity:** If $y = Sx$, then $a y = S(ax)$.  
+2. **Superposition:** If $y_1 = Sx_1$ and $y_2 = Sx_2$, then $y_1 + y_2 = S(x_1 + x_2)$.  
+
+Thus:  
+$$a y_1 + b y_2 = S(a x_1 + b x_2)$$  
+
+Extended Linearity:
+- **Summation:**  
+  $$\sum_{n} a_n y_n = S\left(\sum_{n} a_n x_n\right)$$  
+- **Integration:**  
+  $$\int_{-\infty}^{\infty} a(\tau) y(t - \tau) d\tau = S\left(\int_{-\infty}^{\infty} a(\tau) x(t - \tau) d\tau\right)$$  
