--- a/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L2_2.md
+++ b/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L2_2.md
@@ -1,54 +1,55 @@
 ### 2nd Order Circuit Example
-A circuit with the following components:  
-$x \;(-+)\; \to L \to R \to C \to y(t)\; (+-)\; \to (-+)x$
 
-**KVL:**  
-$$x - L\frac{di}{dt} - Ri - y = 0$$  
-Using $i = C\frac{dy}{dt}$,  
+Circuit:  
+$$x \;(-+)\; \to L \to R \to C \to y(t)\; (+-)\; \to (-+) x$$
+
+**KVL Equation:**  
+$$x - L \frac{di}{dt} - Ri - y = 0$$  
+Using ($i = C\frac{dy}{dt}$):  
 $$x - LC\frac{d^2y}{dt^2} - RC\frac{dy}{dt} - y = 0$$  
 
 ---
 
 ### Examples
-- **Scaling system** ($a_0 = 1, \ b_0 = a$)  
+
+- **Scaling System** (\(a_0 = 1, b_0 = a\)):  
   $$y = ax$$
 
-- **Integrator** ($a_1 = 1, \ b_0 = 1$)  
+- **Integrator** (\(a_1 = 1, b_0 = 1\)):  
   $$\frac{dy}{dt} = x$$
 
-- **Differentiator** ($a_0 = 1, \ b_1 = 1$)  
+- **Differentiator** (\(a_0 = 1, b_1 = 1\)):  
   $$y = \frac{dx}{dt}$$
 
-- **Integrator with feedback** ($a_1 = 1, \ a_0 = a, \ b_0 = 1$)  
+- **Integrator with Feedback** (\(a_1 = 1, a_0 = a, b_0 = 1\)):  
   $$\frac{dy}{dt} + ay = x$$  
 
----
+
 
 ### Systems Described by Differential Equations
-Many systems are described by a _linear constant coefficient ordinary differential equation (LCCODE)_:
 
+Many systems are described by a **Linear Constant Coefficient Ordinary Differential Equation (LCCODE):**  
 $$a_n \frac{d^n y}{dt^n} + \cdots + a_1 \frac{dy}{dt} + a_0 y(t) = b_m \frac{d^m x}{dt^m} + \cdots + b_1 \frac{dx}{dt} + b_0 x(t)$$
 
-With given _initial conditions_:  
-$$y^{(n-1)}(0), \ \dots, \ y'(0), \ y(0)$$  
+With given **initial conditions:**  
+$$
+y^{(n-1)}(0), \ \dots, \ y'(0), \ y(0)
+$$
 
-- **n**: order of the system.  
-- $b_0, \dots, b_m, a_0, \dots, a_n$: coefficients of the system.  
+- \(n\): the order of the system.  
+- \(b_0, \dots, b_m, a_0, \dots, a_n\): coefficients of the system.  
 
-An LCCODE gives an implicit description of a system:  
-- Describes how $x(t)$, $y(t)$, and their derivatives interrelate.  
-- Does not provide an explicit solution for $y(t)$ in terms of $x(t)$.  
+An LCCODE describes how \(x(t)\), \(y(t)\), and their derivatives interrelate. It does **not** provide an explicit solution for \(y(t)\) in terms of \(x(t)\).  
 
 ---
 
 ### System Invertibility
+
 A system is invertible if the input signal can be recovered from the output signal:  
 $$y = Fx, \quad x = F^{-1}y = F^{-1}Fx$$  
 
 Diagram:  
 $$x \to [F] \to y \to [F^{-1}] \to x$$  
-
-Note: $F^{-1}F = I$, the identity operator.  
 
 **Examples:**  
 - AM Radio transmitter and receiver.  
@@ -57,96 +58,133 @@ Note: $F^{-1}F = I$, the identity operator.
 ---
 
 ### Example: Cruise Control
-Control feedback system:  
+
+Control system diagram:  
 $$x \to (+)_{+} \to \text{error} \to [k] \to \text{gas} \to [H] \to y$$  
 $$[H][k]y \to (+)_{-}$$  
 
-Output:  
+**Output Equation:**  
 $$y = H(k(x - y))$$  
 
-The system can become unstable if $k$ is too large (depending on $H$):  
+The system can become unstable if \(k\) is too large:  
 - Positive error adds gas.  
-- Delayed velocity change causes speed to overshoot.  
+- Delay in velocity change causes speed to overshoot.  
 - Negative error reduces gas.  
-- Delayed velocity change causes speed to undershoot.  
+- Delay in velocity change causes speed to undershoot.  
 
----
+
 
 ### System Stability
-- Stability is critical for most engineering applications.  
-- A system is **Bounded Input Bounded Output (BIBO) stable** if:  
-  $$|x(t)| \leq M_x < \infty$$  
-  always results in:  
-  $$|y(t)| \leq M_y < \infty,$$  
-  where $M_x$ and $M_y$ are finite positive numbers.  
 
----
+A system is **Bounded Input Bounded Output (BIBO) stable** if:  
+$$|x(t)| \leq M_x < \infty \quad \implies \quad |y(t)| \leq M_y < \infty$$  
+
+Where \(M_x\) and \(M_y\) are finite positive numbers.
+
+
 
 ### Time-Invariance
-A system is time-invariant if a time shift in the input produces the same time shift in the output.  
 
-For a system $F$,  
-$$y(t) = F(x(t))$$  
-implies that:  
-$$y(t-\tau) = F(x(t-\tau))$$  
-for any time shift $\tau$.  
+A system is time-invariant if a time shift in the input produces the same time shift in the output:  
+$$y(t) = F(x(t)) \implies y(t-\tau) = F(x(t-\tau))$$  
 
----
+
 
 ### System Memory
-- A system is **memoryless** if the output depends only on the **present input**.  
-  - Example: Ideal amplifier.  
-- A system with **memory** has an output that depends on **past or future inputs**.  
-  - Example: Energy storage elements like capacitors and inductors.  
-- A **causal system** has an output that depends only on **past or present inputs**.  
 
----
+- A **memoryless system**: The output depends only on the **present input**.  
+  - Examples: Ideal amplifier, ideal gear or transmission.  
+
+- A **system with memory**: The output depends on **past or future inputs**.  
+  - Examples: Capacitors and inductors, springs or moving masses.  
+
+- A **causal system**: The output depends only on **past or present inputs**.  
+
+
 
 ### Linearity
-A system $F$ is linear if:  
-1. **Homogeneity**: $F(a x) = a F(x)$, where $a$ is a scalar.  
-2. **Superposition**: $F(x + \tilde{x}) = F(x) + F(\tilde{x})$.  
 
----
+A system \(F\) is linear if:  
+
+1. **Homogeneity:**  
+   $$F(a x) = a F(x)$$  
+   Where \(a\) is a scalar.  
+
+2. **Superposition:**  
+   $$F(x + \tilde{x}) = F(x) + F(\tilde{x})$$  
+
+**Examples of Linear Systems:** Scaling, differentiation, integration, convolution.  
+**Examples of Nonlinear Systems:** Sign detector, squaring system, comparator.  
+
+
 
 ### Interconnection of Systems
-1. **Cascade (series):**  
+
+1. **Cascade (Series):**  
    $$y = G(F(x)) = GFx$$  
-   Diagram: $x \to [F] \to [G] \to y$.  
-2. **Sum (parallel):**  
+
+2. **Parallel (Sum):**  
    $$y = Fx + Gx$$  
-   Diagram: $x \to [F] \to (+), \; x \to [G] \to (+) \to y$.  
+
 3. **Feedback:**  
    $$y = F(x - Gy)$$  
-   Diagram: $x \to (+)_{+} \to [F] \to y, \; [G]y \to (+)_{-} \to (+)_{+}$.  
 
 ---
 
-### Example: Integrator with Feedback
-Input to the integrator is $x - ay$, where $a$ is the feedback coefficient:  
-$$\int_{0}^t (x(\tau) - ay(\tau)) d\tau = y(t)$$  
-Derivative:  
-$$x - ay = \frac{dy}{dt}$$  
+### Impulse Signals
 
----
+- An **impulse function** \(\delta(t)\) is an idealization of a signal that:  
+  - Is very large near \(t = 0\).  
+  - Is very small away from \(t = 0\).  
+  - Has an integral of 1.  
 
-### Block Diagram
-- Lines with arrows denote signals.  
-- Boxes denote systems; arrows show inputs and outputs.  
+**Properties:**  
+1. $$\int_{-\infty}^\infty f(t) \delta(t-T) dt = f(T)$$  
+2. $$\int_{a}^{b} \delta(t) dt = 1 \text{ if } a < 0 < b, \text{ else } 0$$  
 
-**Examples:**  
-1. **Scaling system:**  
-   $$y(t) = ax(t)$$  
-   - Amplifier: $|a| > 1$.  
-   - Attenuator: $|a| < 1$.  
-   - Inverting: $a < 0$.  
-   - $a$: gain or scale factor.  
 
-2. **Time shift system:**  
-   $$y(t) = x(t - T)$$  
-   - Delay system: $T > 0$.  
-   - Predictor system: $T < 0$.  
 
-3. **Convolution system:**  
-   $$y(t) = \int_{-\infty}^\infty x(t-\tau)h(\tau)d\tau$$  
-   where $h(\tau)$ is a given function.  
+### More Complex Signals
+
+- **Unit Triangle Function:**  
+  $$
+  \text{Tri}(t) = 
+  \begin{cases} 
+  1 - |t|, & |t| < 1 \\ 
+  0, & \text{otherwise}
+  \end{cases}
+  $$
+
+- **Unit Ramp Function:**  
+  $$
+  r(t) = 
+  \begin{cases} 
+  t, & t \geq 0 \\ 
+  0, & t < 0 
+  \end{cases}
+  $$  
+
+  Integral of the unit step function:  
+  $$r(t) = \int_{-\infty}^t u(\tau) d\tau$$
+
+
+
+### Sinusoidal Signals
+
+General form:  
+$$x(t) = A \cos(\omega t + \theta)$$  
+
+- $\omega = 2 \pi f$: Radian frequency.  
+- $T = \frac{1}{f} = \frac{2 \pi}{\omega}$: Period.  
+
+
+
+### Complex Signals
+
+- Euler's formula:  
+  $$e^{j\phi} = \cos(\phi) + j\sin(\phi)$$  
+
+- Complex sinusoid:  
+  $$Ae^{j(\omega t + \theta)} = A\cos(\omega t + \theta) + jA\sin(\omega t + \theta)$$  
+  Real part:  
+  $$\text{Re}(Ae^{j(\omega t + \theta)}) = A\cos(\omega t + \theta)$$  
