--- a/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L3_2-4.md
+++ b/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L3_2-4.md
@@ -89,13 +89,13 @@ $$y(t) = \int_{-\infty}^{\infty} x(\tau) h_{\tau}(t) d\tau$$
 For time-invariant systems:  
 $$h_{\tau}(t) = h(t - \tau)$$  
 
----
+
 
 ### Time-Invariance
 For a time-invariant system $H$:  
 $$h_{\tau}(t) = h(t - \tau)$$  
 
----
+
 
 ### Linearity
 A system $S$ is linear if:  
@@ -109,4 +109,28 @@ Extended Linearity:
 - **Summation:**  
   $$\sum_{n} a_n y_n = S\left(\sum_{n} a_n x_n\right)$$  
 - **Integration:**  
-  $$\int_{-\infty}^{\infty} a(\tau) y(t - \tau) d\tau = S\left(\int_{-\infty}^{\infty} a(\tau) x(t - \tau) d\tau\right)$$  
+  $$\int_{-\infty}^{\infty} a(\tau) y(t - \tau) d\tau = S\left(\int_{-\infty}^{\infty} a(\tau) x(t - \tau) d\tau\right)$$
+  
+---
+### Impulse Response
+
+The impulse response of a linear system, ($h_{\tau}$), is the output of the system at time \(t\) to an impulse at time \(\tau\). For a system (H), this can be written as:  
+$$h_{\tau} = H(\delta_{\tau})$$
+
+**Notes:**  
+1. A positive ($\tau$) causes a forward shift of the signal and defines the sampling range of ($t - \tau$).  
+2. On the left-hand side, \(t\) represents a specific value of time, while on the right-hand side, \(t\) varies over all real numbers (e.g., all time \(t\)). Despite the impulse nature, the specific value of \(t\) on the left depends on this variation.
+
+The equation:  
+$$h_{\tau}(t) = H(\delta_{\tau}(t))$$  
+can be confusing.  
+
+- At \(\tau = 0\):  
+  $$h = h_0 = H(\delta_0)$$  
+
+- Using \(t = 2\) for evaluation:  
+  $$h(2) = H(\delta(2))$$  
+  implies \(h(2) = H(0)\), which is **incorrect**.
+
+A better notation for the process is:  
+$$h(t, \tau) = h(2, 0) - h(t, 0)$$
