--- a/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L3_2-4.md
+++ b/Signals and Systems/ELE 301_Paul Cuff/Lecture Notes/L3_2-4.md
@@ -1,3 +1,80 @@
+### Convolution Systems with Complex Exponential Inputs
+
+
+
+
+### Properties of Convolution
+Given
+$$(f* g)(t) = \int^{\infty}_{-\infty}f(\tau)g(\tau)d \tau$$
+Convolution Integral is 
+
+
+Commutative 
+
+
+
+
+
+
+
+
+Example
+<to be insert>
+
+
+Assocaitive
+
+
+
+Linear
+
+Time Invariant
+
+### Graphical Interpretation
+An increment in input $x(\tau)\delta_{\tau}(t) d\tau$ produces an impulse response $x(\tau)h_{\tau}(t)d\tau$. The output is the integral of all the reponses
+
+$$y(t) = \int^{\infty}_{-\infty}x(\tau)h_{\tau}(t)d \tau$$
+
+Another persepective to look at the integral
+- $h_{\tau}(t) = h(t-\tau)$ is the impulse reponse delayed to time $\tau$
+- h_{t}(\tau) = h(t-\tau)$ would be a function of $\tau$ and delayed to time t, making the signal flipped
+
+To find $y(t)$
+- flip impulse response $$h(\tau)$$ backwards in time (yields $$h(-\tau)$$)
+- drag to the right over $$t$$ (yields $$h(-( \tau - t))$$)
+- multiply pointwise by $$x$$ (yields $$x(\tau)h(t - \tau)$$)
+- integrate over $$\tau$$ to get $$y(t) = \int_{-\infty}^{\infty} x(\tau) h(t - \tau) \, d\tau$$
+
+Example
+<to be insert>
+
+### Convolution Evaluation and Properties
+
+#### Convolution Integral
+The convolution of an input signal x(t) with an impulse reponse h(t) is
+
+$$y(t) = \int_{-\infty}^{\infty} x(\tau) h_{\tau}(t - \tau) d\tau = (x*h)(t)$$
+
+note: the * notation could be confusing when referring to the textbook as it could have differnet meaning when placing on the left side
+
+**Casual System**
+
+For a causal system $h(t) = 0$ for $t < 0$ and $h(t - \tau) = 0$ for $t > \tau$ by definition, the upper limit of the convolution integral becomes t
+
+$$y(t) = \int_{-\infty}^{t} x(\tau) h_{\tau}(t - \tau) d\tau $$
+
+Now only past and present values of $x(\tau)$ contribtue to $y(t)$
+
+**Causal Input**
+For a causal input where $x(t) = 0$ for $t < 0$ , the lower limit of the convolution integral becomes 0 as no input is given before t = 0
+
+
+$$y(t) = \int_{0}^{\infty} x(\tau) h_{\tau}(t - \tau) d\tau $$
+
+Combine a causal h and a causal x, we get a very simpflied integral of 
+
+$$y(t) = \int_{0}^{t} x(\tau) h_{\tau}(t - \tau) d\tau $$
+---
 ### L3 Summary
 For an input $x(t)$, the output of a linear system is given by the superposition integral:  
 $$y(t) = \int_{-\infty}^{\infty} x(\tau) h_{\tau}(t) d\tau$$
